Using React Elements and  Components

--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
     "test": "jest"
   },
   "repository": {
@@ -26,7 +28,6 @@
   },
   "browserslist": [
     "last 2 Chrome version",
-    "last 2 Brave version",
     "last 2 Firefox version",
     "last 2 versions"
   ]
